AUT-1667 Add access token configuration for hydra client
